added character description with style

--- a/my-vue-app/src/style/Home.scss
+++ b/my-vue-app/src/style/Home.scss
@@ -42,7 +42,6 @@
     margin-top: 20px;
   }
   
-  /* Primary Button */
   .browse_button {
     width: 204px;
     height: 48px;
@@ -87,10 +86,10 @@
   }
   
   .browse_button:hover {
-    background: #32108E; /* Darker shade on hover */
+    background: #32108E; 
   }
   
   .character_button:hover {
-    background: #E0E0F2; /* Slightly darker shade for a hover effect */
+    background: #E0E0F2; 
   }
   
