--- a/my-vue-app/src/style/Banner.scss
+++ b/my-vue-app/src/style/Banner.scss
@@ -1,8 +1,7 @@
-/* src/style/Banner.scss */
 .inner-rectangle {
   box-sizing: border-box;
   width: 100%;
-  height: 200px; /* גובה הבאנר */
+  height: 200px; 
   background: #efeff4;
   border: 2px dashed #8e8e93;
   display: flex;
