--- a/my-vue-app/src/style/CharacterTable.scss
+++ b/my-vue-app/src/style/CharacterTable.scss
@@ -1,71 +1,71 @@
 .table-container {
-    width: 100%;
-    overflow-x: auto;
-    margin: 50px 0;
-  }
-  
-  .responsive-table {
-    width: 100%;
-    border-collapse: collapse;
-    font-family: Arial, sans-serif;
-  }
-  
-  .responsive-table th,
-  .responsive-table td {
-    padding: 12px 15px;
-    border: 1px solid #ddd;
-    text-align: left;
-  }
-  
-  .responsive-table th {
-    color: white;
-    background-color: #200062; 
-    font-weight: bold;
-  }
-  
+  width: 80%;
+  margin: 0 auto;
+  overflow-x: auto;
+}
 
-  .responsive-table tr:nth-child(even) td {
-    background-color: #F5F0FF;
-    ;
-  }
-  
-  .responsive-table thead tr {
-    border-bottom: 2px solid #200062;
-  }
-  
-  .responsive-table tr {
-    transition: background-color 0.3s ease;
-  }
-  
-  .responsive-table tr:hover {
-    background-color: #d1c4e9; /* Highlight color on row hover */
-  }
-  
-  @media (max-width: 600px) {
-    .responsive-table thead {
-      display: none;
-    }
-  
-    .responsive-table tr {
-      display: block;
-      margin-bottom: 15px;
-    }
-  
-    .responsive-table td {
-      display: block;
-      text-align: right;
-      padding-left: 50%;
-      position: relative;
-    }
-  
-    .responsive-table td::before {
-      content: attr(data-label);
-      position: absolute;
-      left: 0;
-      width: 50%;
-      padding-left: 15px;
-      font-weight: bold;
-      text-align: left;
-    }
-  }
-  
+.responsive-table {
+  width: 100%;
+  border-collapse: collapse;
+  font-family: Arial, sans-serif;
+}
+
+.responsive-table th,
+.responsive-table td {
+  padding: 12px 15px;
+  border: 1px solid #ddd;
+  text-align: left;
+}
+
+.responsive-table th {
+  background-color: #f4f4f4;
+  font-weight: bold;
+}
+
+.responsive-table tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+.clickable-row:hover {
+  background-color: #472b2b;
+  cursor: pointer;
+}
+
+.expanded-row {
+  background-color: #f9f9f9;
+}
+
+.expanded-content {
+  display: flex;
+  align-items: flex-start;
+  padding: 20px;
+  background-color: #ffffff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  margin-top: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.character-image {
+  width: 150px;
+  height: 150px;
+  border-radius: 8px;
+  margin-right: 20px;
+  object-fit: cover;
+}
+
+.character-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.character-details p {
+  margin: 5px 0;
+  font-size: 14px;
+  color: #333;
+}
