--- a/my-vue-app/src/style/CharacterTable.scss
+++ b/my-vue-app/src/style/CharacterTable.scss
@@ -69,3 +69,24 @@
   font-size: 14px;
   color: #333;
 }
+.load-more-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.load-more-button {
+  background-color: #1E90FF;
+  color: #fff;
+  border: none;
+  border-radius: 25px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease;
+}
+
+.load-more-button:hover {
+  background-color: #1C86EE;
+}
