--- a/my-vue-app/src/style/SearchBar.scss
+++ b/my-vue-app/src/style/SearchBar.scss
@@ -1,45 +1,43 @@
 .search-bar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 20px 0;
-  }
-  
-  .search-input-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-  }
-  
-  .search-icon {
-    position: absolute;
-    right: 10px;
-    font-size: 16px;
-    color: #aaa;
-  }
-  
-  .search-input {
-    padding: 10px 10px 10px 30px; 
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 25px 0 0 25px;
-    outline: none;
-    width: 300px;
-  }
-  
-  .search-button {
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-left: none;
-    background-color: #6a5acd;
-    color: white;
-    cursor: pointer;
-    border-radius: 0 25px 25px 0;
-    outline: none;
-  }
-  
-  .search-button:hover {
-    background-color: #836fff;
-  }
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0;
+}
+
+.search-input-container {
+  display: flex;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  overflow: hidden; 
+}
+
+.search-input {
+  padding: 10px 10px 10px 30px; 
+  font-size: 16px;
+  border: none; 
+  outline: none;
+  width: 300px;
+}
+
+.search-icon {
+  position: absolute;
+  right: 10px;
+  font-size: 16px;
+  color: #aaa;
+}
+
+.search-button {
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none; 
+  border-radius: 25px 25px 25px 25px;
+  background-color: #6a5acd;
+  color: white;
+  cursor: pointer;
+}
+
+.search-button:hover {
+  background-color: #836fff;
+}
