--- a/my-vue-app/src/style/CharacterDetails.scss
+++ b/my-vue-app/src/style/CharacterDetails.scss
@@ -1,48 +1,49 @@
 .character-details-container {
-    display: flex;
-    gap: 40px; 
-    padding: 30px;
-    background-color: #f9f9fc;
+  display: flex;
+  gap: 40px;
+  padding: 30px;
+  background-color: #f9f9fc;
+  border-radius: 16px;
+  box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.15);
+  align-items: center;
+  justify-content: center;
+  margin: 20px auto; 
+  width: 40rem;
+
+  .character-image {
+    flex: 0 0 220px; 
+    height: 220px;
     border-radius: 16px;
-    box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.15);
-    align-items: center;
-    justify-content: center; 
-    max-width: 800px; 
-    margin: 0 auto; 
-  
-    .character-image {
-      flex: 0 0 200px; 
-      height: 200px;
-      border-radius: 16px;
-      overflow: hidden;
-      border: 3px solid #ececec;
-  
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
+    overflow: hidden;
+    border: 3px solid #ececec;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
-  
-    .character-info {
-      flex: 1;
-      h3 {
-        margin-bottom: 20px;
+  }
+
+  .character-info {
+    flex: 1;
+
+    h3 {
+      margin-bottom: 20px;
+      color: #4310ae;
+      font-size: 26px;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    p {
+      margin: 10px 0;
+      font-size: 18px;
+      color: #333;
+
+      strong {
         color: #4310ae;
-        font-size: 24px; 
-        font-weight: bold;
-        text-align: center; 
-      }
-  
-      p {
-        margin: 10px 0;
-        font-size: 18px;
-        color: #333;
-  
-        strong {
-          color: #4310ae;
-        }
       }
     }
   }
-  
+}
+
