--- a/my-vue-app/src/style/CharacterTable.scss
+++ b/my-vue-app/src/style/CharacterTable.scss
@@ -1,13 +1,16 @@
 .table-container {
-  width: 80%;
+  width: 80%; /* מגביל את רוחב הטבלה */
+  max-width: 1000px; /* מגביל את רוחב המיכל למקסימום פיקסלים */
   margin: 0 auto;
-  overflow-x: auto;
+  flex-grow: 1;
+  overflow-x: auto; /* מאפשר גלילה אופקית רק אם הכרחי */
 }
 
 .responsive-table {
   width: 100%;
   border-collapse: collapse;
   font-family: Arial, sans-serif;
+  table-layout: fixed; /* מקבע את הרוחב של העמודות */
 }
 
 .responsive-table th,
@@ -15,6 +18,9 @@
   padding: 12px 15px;
   border: 1px solid #ddd;
   text-align: left;
+  white-space: nowrap; 
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .responsive-table th {
@@ -29,6 +35,7 @@
 .clickable-row:hover {
   background-color: #472b2b;
   cursor: pointer;
+  color: rgb(87, 64, 64); 
 }
 
 .expanded-row {
@@ -47,8 +54,8 @@
 }
 
 .character-image {
-  width: 150px;
-  height: 150px;
+  width: 100px; 
+  height: 100px;
   border-radius: 8px;
   margin-right: 20px;
   object-fit: cover;
@@ -66,27 +73,49 @@
 
 .character-details p {
   margin: 5px 0;
-  font-size: 14px;
+  font-size: 12px;
   color: #333;
 }
-.load-more-container {
+
+.pagination {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
-}
-
-.load-more-button {
-  background-color: #1E90FF;
-  color: #fff;
-  border: none;
-  border-radius: 25px;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  gap: 10px;
+  background-color: #ffffff;
   padding: 10px 20px;
-  cursor: pointer;
-  font-size: 16px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s ease;
+  box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+  border-top: 1px solid #ddd;
 }
 
-.load-more-button:hover {
-  background-color: #1C86EE;
+.pagination button {
+  padding: 8px 16px;
+  font-size: 14px;
+  border: 1px solid #ddd;
+  background-color: #f8f8f8;
+  color: #333;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: #1e90ff;
+    color: #fff;
+  }
+
+  &:disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+  }
+}
+
+.pagination span {
+  font-size: 14px;
+  font-weight: bold;
+  color: #333;
 }
